# ParallelDB

./: CMakeLists.txt  docker-compose.yml
include/db/: async_query_executor.h  connector.h  query_executor.h  settings.h
include/utils/: string.h  timer.h
scripts/: data_generation.py  init_postgresql.sh  restart_table.py
src/: main.cpp
src/db/: async_query_executor.cpp  connector.cpp  query_executor.cpp  settings.cpp
templates/: settings.json.in
